--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.45"
+    "autoprefixer": "^10.4.13",
+    "axios": "^1.2.1",
+    "postcss": "^8.4.20",
+    "store": "^2.0.12",
+    "tailwindcss": "^3.2.4",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
