--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.10",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.1",
+    "element-plus": "^2.2.27",
+    "element-ui": "^2.15.12",
     "postcss": "^8.4.20",
     "store": "^2.0.12",
     "tailwindcss": "^3.2.4",
