--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@element-plus/icons-vue": "^2.0.10",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.1",
+    "dayjs": "^1.11.7",
     "element-plus": "^2.2.27",
     "element-ui": "^2.15.12",
     "postcss": "^8.4.20",
