--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "element-plus": "^2.2.27",
     "element-ui": "^2.15.12",
     "postcss": "^8.4.20",
+    "solarlunar-es": "^1.0.9",
     "store": "^2.0.12",
     "tailwindcss": "^3.2.4",
     "vue": "^3.2.45",
