--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "store": "^2.0.12",
     "tailwindcss": "^3.2.4",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-smooth-dnd": "^0.0.2",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
