--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "solarlunar-es": "^1.0.9",
     "store": "^2.0.12",
     "tailwindcss": "^3.2.4",
+    "uuid": "^9.0.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
     "vuedraggable": "^4.1.0"
