--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "tailwindcss": "^3.2.4",
     "uuid": "^9.0.0",
     "vue": "^3.2.45",
+    "vue-grid-layout": "3.0.0-beta1",
     "vue-router": "^4.1.6",
     "vuedraggable": "^4.1.0"
   },
